just checking this is in the right place before i start work on it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ iframe.active { display: block;}
 <script type="text/javascript">
 var Dash = {
     nextIndex: 0,
-    //Don't put too many items in this list
+    //Don't put too many items in this list.
     dashboards: [
         {url: "http://ur1.com", time: 600, refresh: true},
         {url: "http://ur2.com", time: 60, refresh: true},
