updated urls and changed the timings

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ var Dash = {
     nextIndex: 0,
     //Don't put too many items in this list.
     dashboards: [
-        {url: "http://www.worthybobs.com", time: 600, refresh: true},
-        {url: "http://www.worthyontheweb.co.uk", time: 60, refresh: true},
-        {url: "http://www.worthybobs.co.uk", time: 10, refresh: true}
+        {url: "http://www.worthybobs.com", time: 30, refresh: true},
+        {url: "http://www.worthyontheweb.co.uk", time: 30, refresh: true},
+        {url: "http://www.funnylittlegiftcompany.co.uk", time: 30, refresh: true}
     ],
     startup: function () {
         for (var index = 0; index < Dash.dashboards.length; index++) {
