--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@ var Dash = {
     nextIndex: 0,
     //Don't put too many items in this list.
     dashboards: [
-        {url: "http://www.worthybobs.com", time: 30, refresh: true},
-        {url: "http://www.worthyontheweb.co.uk", time: 30, refresh: true},
-        {url: "http://www.funnylittlegiftcompany.co.uk", time: 30, refresh: true}
+        {url: "https://digitallabs.mmu.ac.uk", time: 30, refresh: true},
+        {url: "https://calendar.google.com/calendar/b/1/r?tab=wc&pli=1", time: 30, refresh: true},
+        {url: "http://www.funnylittlegiftcompany.co.uk", time: 30, refresh: true},
+        {url: "https://villagewebco.uk", time: 30, refresh: true},
     ],
     startup: function () {
         for (var index = 0; index < Dash.dashboards.length; index++) {
