updated urls - now includes goog calendar

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ var Dash = {
     nextIndex: 0,
     //Don't put too many items in this list.
     dashboards: [
+        {url: "https://calendar.google.com/calendar/embed?src=dkui5t4ti2njn68abf6apj1olo%40group.calendar.google.com&ctz=Europe%2FLondon", time: 30, refresh: true},
         {url: "https://digitallabs.mmu.ac.uk", time: 30, refresh: true},
-        {url: "https://calendar.google.com/calendar/b/1/r?tab=wc&pli=1", time: 30, refresh: true},
         {url: "http://www.funnylittlegiftcompany.co.uk", time: 30, refresh: true},
         {url: "https://villagewebco.uk", time: 30, refresh: true},
     ],
