--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
-<title>Dashboard Example</title>
+<title>Nagged By Pi </title>
 <style type="text/css">
 body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; }
 iframe { border: none; width: 100%; height: 100%; display: none; }
