--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@ var Dash = {
     nextIndex: 0,
     //Don't put too many items in this list.
     dashboards: [
+
         {url: "https://calendar.google.com/calendar/embed?src=dkui5t4ti2njn68abf6apj1olo%40group.calendar.google.com&ctz=Europe%2FLondon", time: 30, refresh: true},
         {url: "https://digitallabs.mmu.ac.uk", time: 30, refresh: true},
-        {url: "http://www.funnylittlegiftcompany.co.uk", time: 30, refresh: true},
-        {url: "https://villagewebco.uk", time: 30, refresh: true},
+        {url: "https://digitallabs.mmu.ac.uk/test-page/", time: 30, refresh: true},
+        //{url: "http://worthyontheweb.co.uk/pointless-test-page/", time: 30, refresh: true},
     ],
     startup: function () {
         for (var index = 0; index < Dash.dashboards.length; index++) {
