--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ var Dash = {
 
         {url: "https://calendar.google.com/calendar/embed?src=dkui5t4ti2njn68abf6apj1olo%40group.calendar.google.com&ctz=Europe%2FLondon", time: 30, refresh: true},
         {url: "https://digitallabs.mmu.ac.uk", time: 30, refresh: true},
-        {url: "https://digitallabs.mmu.ac.uk/test-page/", time: 30, refresh: true},
+        {url: "https://dh2.mmu.ac.uk", time: 30, refresh: true},
         //{url: "http://worthyontheweb.co.uk/pointless-test-page/", time: 30, refresh: true},
     ],
     startup: function () {
